crates/hir-ty/tests/snapshots/jls_source_level__switch_yield_at_13_is_reported.snap
---
source: crates/hir-ty/tests/jls_source_level.rs
expression: out
---
FILE /src/com/example/SwitchYield.java:
package com.example;

class A {
    int m(int i) {
        return switch (i) {
            case 1:
                yield 1;
            default:
                yield 2;
        };
    }
}

@4:15: feature-not-supported-in-source-level: switch expressions are not supported in source level 13 (use source level 14 or higher to enable switch expressions)
