crates/hir-ty/tests/snapshots/jls_source_level__text_blocks_at_14_are_reported.snap
---
source: crates/hir-ty/tests/jls_source_level.rs
expression: out
---
FILE /src/com/example/TextBlocks.java:
package com.example;

class A {
    String s = """
        block
        """;
}

@3:15: feature-not-supported-in-source-level: text blocks are not supported in -source 14 (use -source 15 or higher to enable text blocks)
