crates/hir-ty/tests/snapshots/jls_source_level__text_blocks_at_15_are_legal.snap
---
source: crates/hir-ty/tests/jls_source_level.rs
expression: out
---
FILE /src/com/example/TextBlocks.java:
package com.example;

class A {
    String s = """
        block
        """;
}
