crates/hir-ty/tests/snapshots/jls_source_level__try_resource_variable_at_9_is_legal.snap
---
source: crates/hir-ty/tests/jls_source_level.rs
expression: out
---
FILE /src/com/example/TryResource.java:
package com.example;

class A {
    void m(java.io.Reader r) throws Exception {
        try (r) {
        }
    }
}
