crates/hir-ty/tests/snapshots/jls_source_level__unbounded_wildcard_instanceof_at_8_is_legal.snap
---
source: crates/hir-ty/tests/jls_source_level.rs
expression: out
---
FILE /src/com/example/WildcardInstanceof.java:
package com.example;

class A {
    boolean m(Object o) {
        return o instanceof java.util.List<?>;
    }
}
