crates/hir-ty/tests/snapshots/jls_source_level__unconditional_pattern_at_20_is_reported.snap
---
source: crates/hir-ty/tests/jls_source_level.rs
expression: out
---
FILE /src/com/example/UnconditionalPattern.java:
package com.example;

class A {
    boolean m(String s) {
        return s instanceof Object o;
    }
}

@4:15: feature-not-supported-in-source-level: unconditional patterns in instanceof are not supported in source level 20 (use source level 21 or higher to enable unconditional patterns in instanceof)
