crates/hir-ty/tests/snapshots/jls_source_level__unconditional_pattern_at_21_is_legal.snap
---
source: crates/hir-ty/tests/jls_source_level.rs
expression: out
---
FILE /src/com/example/UnconditionalPattern.java:
package com.example;

class A {
    boolean m(String s) {
        return s instanceof Object o;
    }
}
