crates/hir-ty/tests/snapshots/jls_source_level__underscore_expression_is_not_a_variable.snap
---
source: crates/hir-ty/tests/jls_source_level.rs
expression: out
---
FILE /src/com/example/UnderscoreExpr.java:
package com.example;

class A {
    void m(Object o) {
        switch (o) {
            case _ -> {}
            default -> {}
        }
    }
}
