crates/hir-ty/tests/snapshots/jls_source_level__unknown_level_reports_nothing.snap
---
source: crates/hir-ty/tests/jls_source_level.rs
expression: out
---
FILE /src/com/example/Records.java:
package com.example;

record A(int x) {}
