crates/hir-ty/tests/snapshots/jls_source_level__unknown_level_reports_nothing_for_underscore.snap
---
source: crates/hir-ty/tests/jls_source_level.rs
expression: out
---
FILE /src/com/example/Unnamed.java:
package com.example;

class A {
    void m() {
        int _ = 1;
    }
}
